--- a/social_network/chats/static/css/all_chats/style.css
+++ b/social_network/chats/static/css/all_chats/style.css
@@ -347,3 +347,7 @@ input[type="checkbox"]:hover{
     display: flex;
     align-items: center;
 }
+.friend-name{
+    max-height: calc(0.6vw + 0.9vh);
+    overflow-x: hidden;
+}
