--- a/social_network/settings_app/templates/user_settings/user_settings.html
+++ b/social_network/settings_app/templates/user_settings/user_settings.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="main-card">
-            <div class="profile-card">
+            <div class="profile-card default-profile-card">
                 <div class="header-card">
                     <p>Картка профілю</p>
                     <button class="edit-info-button">
@@ -28,12 +28,55 @@
                 </div>
                 
                 <div class="main-profile">
-                    <img src="{% static 'user_settings/images/account.png' %}" alt="" class="user-img">
+                    {% if my_avatar %}
+                        <img src="{{ my_avatar.image.url }}" alt="" class="user-img">
+                    {% else %}
+                        <img src="{% static 'user_settings/images/account.png' %}" alt="" class="user-img">
+                    {% endif %}
                     <p class="user-text">{{request.user.first_name}} {{request.user.last_name}}</p>
                     <p>@{{request.user.username}}</p>
                 </div> 
                 
             </div>
+            <form method = "post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="profile-card edit-profile-card hidden">
+                    <div class="header-card">
+                        <p>Картка профілю</p>
+                        <button class="edit-info-button hidden">
+                            <img src="{% static 'user_settings/images/edit.png' %}" alt="" class="edit-img all">
+                            Редагувати інформацію
+                        </button>
+                        <button class="save-photo-button" type = "submit">
+                            <img src="{% static 'user_settings/images/edit.png' %}" alt="" class="edit-img all">
+                            Зберегти
+                        </button>
+                    </div>
+                    <div class="main-profile">
+                        <span class = "title-avatar">Оберіть або завантажте фото профілю</span>
+                        {% if my_avatar %}
+                            <img src="{{ my_avatar.image.url }}" alt="" class="user-img" id = "user-img">
+                        {% else %}
+                            <img src="{% static 'user_settings/images/account.png' %}" alt="" class="user-img">
+                        {% endif %}
+                        <div class = "buttons-redact-photo">
+                            <input id = "changeAvatar" class = "change-avatar hidden" name = "avatar" type = "file">
+                            <label for="changeAvatar" class = "label-redact">
+                                <img class = "edit-img all" src="{% static 'user_settings/images/plus.png' %}" alt="">
+                                <span class = "choose-photo">Оберіть фото</span>
+                            </label>
+                        </div>
+                        <div class = "username-field">
+                            <p class="user-text">{{request.user.first_name}} {{request.user.last_name}}</p>
+                            <div class = "change-username">
+                                <span class = "edit-text">Ім'я користувача</span>
+                                <input type="text" value = "{{ request.user.username }}" class = "input-edit" name = "username">
+                            </div> 
+                        </div>
+                    </div>
+                    
+                </div>
+            </form>
             <form action="{% url 'check_info' request.user.pk %}" method = "post">
                 <div class = "screen"></div>
                 {% csrf_token %}
