--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -76,7 +76,9 @@ input::placeholder{
     border-radius: calc(0.2vw + 0.3vh);
     max-width: calc(18.5vw + 26vh);
 }
-
+.message-with-avatar{
+    display: flex;
+}
 .chat-hat{
     display: flex;
     padding-bottom: calc(0.3vw + 0.5vh);
@@ -96,6 +98,9 @@ input::placeholder{
 .information-group{
     display: flex;
     gap: calc(0.3vw + 0.5vh);
+}
+.all-message{
+    border: none;
 }
 .avatar{
     width: calc(1.6vw + 2.3vh);
@@ -286,9 +291,21 @@ input[type="checkbox"]:checked::after {
     margin-right: auto;
     background-color: white;
     border: calc(0.03vw + 0.05vh) rgba(233, 229, 238, 1) solid;
+    gap: calc(0.1vw + 0.2vh);
+}
+.author-people-message{
+    margin-right: auto;
+    background-color: white;
+
+    gap: calc(0.1vw + 0.2vh);
 }
 .message-and-time{
     display: flex;
     gap: calc(0.3vw + 0.5vh);
     align-items: flex-end;
+}
+.avatar-people{
+    border-radius: 1234px;
+    width: calc(1.6vw + 2.6vh);
+    height: calc(1.6vw + 2.6vh);
 }
