--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -61,16 +61,14 @@ a.link.two{
 
 .user-img{
     width: calc(3.3vw + 4.7vh);
-    height: calc(4.7vh + 3.3vw);
-    margin-bottom: calc(0.4vw + 0.5vh);
+    height: calc(3.3vw + 4.7vh);
+    border-radius: 1234px;
 }
 
 .profile-card{
     width: calc(32vw + 45.2vh);
-    height: calc(9.1vw + 12.8vh);
     display: flex;
     align-items: center;
-    justify-content: space-around;
     flex-direction: column;
     background-color: #FFFFFF;
     border-radius: calc(0.3vw + 0.5vh);
@@ -83,7 +81,10 @@ p{
     font-size: calc(0.5vw + 0.7vh);
     font-weight: 500;
 }
-
+.title-avatar{
+    font-weight: 400;
+    font-size: calc(0.5vw + 0.8vh);
+}
 .header-card{
     width: calc(31vw + 43.7vh);
     height: calc(1.3vw + 1.9vh);
@@ -106,6 +107,19 @@ p{
     color: #543C52;
 }
 .save-info-button{
+    width: calc(3.75vw + 5.3vh);
+    height: calc(1.3vw + 1.9vh);
+    background-color: #FFFFFF;
+    border: calc(0.03vw + 0.05vh) #543C52 solid;
+    border-radius: calc(6.5vw + 9.3vh);
+    font-size: calc(0.5vw + 0.7vh);
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
+    color: #543C52;
+}
+.save-photo-button{
     width: calc(3.75vw + 5.3vh);
     height: calc(1.3vw + 1.9vh);
     background-color: #FFFFFF;
@@ -142,18 +156,48 @@ p{
 }
 .main-profile{
     width: calc(31vw + 43.7vh);
-    height: calc(8.5vh + 6vw);
     display: flex;
     align-items: center;
     justify-content:space-evenly;
     flex-direction: column;
+    gap: calc(0.8vw + 1.2vh);
 }
 
 .user-text{
     font-size: calc(0.8vw + 1.1vh);
     font-weight: 700;
 }
+.label-redact{
+    display: flex;
+    align-items: center;
+    gap: calc(0.3vw + 0.4vh);
+}
+.change-username{
+    width: calc(31vw + 43.7vh);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: calc(0.3vw + 0.5vh);
+}
 
+.choose-photo{
+    font-weight: 500;
+    font-size: calc(0.5vw + 0.8vh);
+    color: rgba(84, 60, 82, 1);
+}
+.change-username{
+    width: calc(11.9vw + 16.8vh);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.username-field{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: calc(0.3vw + 0.5vh);
+}
 .personal-information-card{
     width: calc(32vw + 45.2vh);
     height: calc(17vw + 24vh);
@@ -209,7 +253,7 @@ p{
     padding-right: calc(0.5vw + 0.7vh);
     padding-bottom: calc(0.3vw + 0.4vh);
     padding-left: calc(0.5vw + 0.7vh);  
-
+    color: rgba(7, 10, 28, 1);
     gap: calc(0.3vw + 0.4vh); 
 }
 
