--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -134,6 +134,22 @@ input::placeholder{
     border-radius: calc(0.7vw + 1vh);
     gap:calc(0.8vw + 1.2vh);
 }
+.modal-edit-group{
+    width: calc(17vw + 24vh);
+    height: calc(25vw + 37.5vh);
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    align-items: center;
+    border: calc(0.03vw + 0.05vh)rgba(205, 206, 210, 1) solid;
+    transform: translate(-50%, -50%);
+    padding: calc(0.8vw + 1.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh);
+    border-radius: calc(0.7vw + 1vh);
+    gap:calc(0.8vw + 1.2vh);
+}
 .frame-cross{
     display: flex;
     width: calc(14vw + 19.7vh);
