--- a/social_network/friends/templates/all_friends/all_friends.html
+++ b/social_network/friends/templates/all_friends/all_friends.html
@@ -28,14 +28,15 @@
                     {% for friend in all_friends %}
                         {% if friend.profile1 == current_user or friend.profile2 == current_user %}
                             <div class = "card" id = "card-friend-{{friend.user.pk}}">
+                                
                                 <div class = "profile-card">
                                     {% for avatar in all_avatars %}
-                                        {% if avatar.active %}
-                                            {% if avatar.profile == friend.profile1 or avatar.profile == friend.profile2 and avatar.profile != current_user %}
-                                                <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                            
+                                        {% if avatar.image %}
+                                            {% if avatar.profile == friend.profile1 %}
+                                                <img class = "post-friend-avatar avatar" src="{{ avatar.image.url }}" alt="">                                              
                                             {% endif  %}
                                         {% else %}
-                                            <img class = "avatar" src="{% static 'images/icons/account.png'%}" alt="">
+                                            <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
                                         {% endif%}
                                     {% endfor %}
                                 </div>
@@ -52,9 +53,15 @@
                                 
                             
                                 <div class = "card-buttons">
-                                    <a class = "button button-confirm">
-                                        Повідомлення
-                                    </a>
+                                    {% if friend.profile1 != current_user %}
+                                        <a class = "button button-confirm" href = "{% url 'create_chat' friend.profile1.pk %}">
+                                            Повідомлення
+                                        </a>
+                                    {% elif friend.profile2 != current_user %}
+                                        <a class = "button button-confirm" href = "{% url 'create_chat' friend.profile2.pk %}">
+                                            Повідомлення
+                                        </a>
+                                    {% endif  %}
                                     <a class = "button button-delete-friend" id = "{% url 'delete_friend' friend.profile1.user.pk%}">
                                         Видалити
                                     </a>
