--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -137,10 +137,12 @@ p{
     width: calc(0.5vw + 0.7vh);
     height: calc(0.7vh + 0.5vw);
 }
+
 .hidden{
     display: none;
     visibility: hidden;
 }
+
 .screen{
     position: absolute;
     margin-right: calc(0.5vw + 1vh);
@@ -200,7 +202,8 @@ p{
 }
 .personal-information-card{
     width: calc(32vw + 45.2vh);
-    height: calc(17vw + 24vh);
+    /* height: calc(17vw + 24vh); */
+    height: fit-content;
     display: flex;
     /* align-items: center; */
     justify-content: space-around;
@@ -385,4 +388,36 @@ button:hover{
 div.url.settings{
     background-color: #E9E5EE;
     border-radius: calc(0.12vw + 0.14vh);
+}
+
+.password-text{
+    font-size: (0.5vw + 0.7vh);
+    color: #070A1C;
+    font-weight: 500;
+}
+
+button.edit-info-button.password{
+    width: calc(6vw + 8.4vh);
+
+}
+
+.passwords-div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: calc(0.3vw + 0.5vh);
+}
+
+.modal-password{
+    background-color: magenta;
+    width: calc(18.7vw + 26.4vh);
+    height: calc(13.1vw + 18.5vh);
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    align-items: center;
+}
+
+.hidden-modal{
+    visibility: hidden;
 }
