--- a/social_network/settings_app/static/user_settings/css/user_settings.css
+++ b/social_network/settings_app/static/user_settings/css/user_settings.css
@@ -311,3 +311,35 @@ div.url.settings{
     background-color: #E9E5EE;
     border-radius: calc(0.12vw + 0.14vh);
 }
+
+.password-text{
+    font-size: (0.5vw + 0.7vh);
+    color: #070A1C;
+    font-weight: 500;
+}
+
+button.edit-info-button.password{
+    width: calc(6vw + 8.4vh);
+
+}
+
+.passwords-div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: calc(0.3vw + 0.5vh);
+}
+
+.modal-password{
+    background-color: magenta;
+    width: calc(18.7vw + 26.4vh);
+    height: calc(13.1vw + 18.5vh);
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    align-items: center;
+}
+
+.hidden-modal{
+    visibility: hidden;
+}
