--- a/social_network/chats/templates/all_chats/all_chats.html
+++ b/social_network/chats/templates/all_chats/all_chats.html
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class = "fullscreen hidden"></div>
-        <div class = "modal-create-group hidden">
+        <div class = "modal-create-group modal-create-group-create hidden">
             <div class = "frame-cross">
                 <img class = "cross-image" src="{% static 'images/cross.png' %}" alt="">
             </div>
