--- a/social_network/registration/static/authorithation/css/style.css
+++ b/social_network/registration/static/authorithation/css/style.css
@@ -8,13 +8,14 @@
     background-color: white;
     border-radius: calc(0.6vw + 0.9vh);
     padding: calc(1.1vw + 1.7vh);
-    margin-left: calc(12.1vw + 17.1vh);
+    margin-right: calc(16vw + 17.1vh);
     position: relative;
     z-index: 2;
 }
 .body{
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 88%;
 }
@@ -50,7 +51,7 @@
     position: absolute;
     width: calc(23.5vw + 33.2vh);
     height: calc(18.2vw + 25.8vh);
-    margin-left: calc(24.3vw + 34.1vh);
+    margin-left: calc(19vw + 27vh);
     z-index: 1;
 }
 .inputs{
